Fixing Spacing

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,91 +1,90 @@
 #socialLinks {
-    display: inline-flex;
-    flex-direction: row;
-    align-items: flex-start;
-    color: white;
-    margin-bottom:20px;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: flex-start;
+  color: white;
+  margin-bottom: 20px;
 }
 .link {
-    font-weight:bolder;
-    margin: auto;
-    padding:2px 15px;
-    color: white;
-    /* border-bottom: 5px solid white; */
+  font-weight: bolder;
+  margin: auto;
+  padding: 2px 15px;
+  color: white;
+  /* border-bottom: 5px solid white; */
 }
-.link a{
-    text-decoration: none;
-    color:white;
+.link a {
+  text-decoration: none;
+  color: white;
 }
 
 .link a:hover {
-    color: lightgray;
-    border-bottom: 4px solid lightgray;
-    animation-name: fadeColor;
-    animation-duration: 1s;
-    animation-iteration-count: 2;
-    animation-direction: alternate;
+  color: lightgray;
+  border-bottom: 4px solid lightgray;
+  animation-name: fadeColor;
+  animation-duration: 1s;
+  animation-iteration-count: 2;
+  animation-direction: alternate;
 }
 
 .footerText {
-    font-weight:bolder;
-    margin: auto;
-    padding:15px 5px;
-    color: white;
+  font-weight: bolder;
+  margin: auto;
+  padding: 15px 5px;
+  color: white;
 }
 
 @keyframes fadeColor {
-    from {
-      opacity: 50%;
-      color: white;
-      border-bottom: 0px solid lightgray;
-    }
-  
-    to {
-      opacity: 100%;
-      color: lightgray;
-      border-bottom: 4px solid lightgray;
-    }
+  from {
+    opacity: 50%;
+    color: white;
+    border-bottom: 0px solid lightgray;
   }
 
-  #reactPower {
-    display: block;
-    flex-direction: row;
-    align-items: left;
-    font-style:italic;
-    margin-bottom: 5px;
-    font-size:small;
+  to {
+    opacity: 100%;
+    color: lightgray;
+    border-bottom: 4px solid lightgray;
   }
+}
 
+#reactPower {
+  display: block;
+  flex-direction: row;
+  align-items: left;
+  font-style: italic;
+  font-size: small;
+}
+
+.App-logo {
+  height: 5vmin;
+  pointer-events: none;
+}
+
+.Link-logo {
+  height: 3vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    height: 5vmin;
-    pointer-events: none;
+    animation: App-logo-spin infinite 5s linear;
+    /* animation: App-logo-spin-to-appear infinite 10s linear; */
   }
-
-  .Link-logo {
-    height: 3vmin;
-    pointer-events: none;
+}
+@keyframes App-logo-spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 100%;
+    margin-left: 20px;
   }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 5s linear;
-      /* animation: App-logo-spin-to-appear infinite 10s linear; */
-    }
+  50% {
+    transform: rotate(360deg);
+    opacity: 0%;
+    margin-right: 40px;
   }
-  @keyframes App-logo-spin {
-    0% {
-      transform: rotate(0deg);
-      opacity: 100%;
-      margin-left: 20px;
-    }
-    50% {
-      transform: rotate(360deg);
-      opacity: 0%;
-      margin-right: 40px;
-    }
-    100% {
-      transform: rotate(720deg);
-      opacity: 100%;
-      margin-left: 20px;
-    }
+  100% {
+    transform: rotate(720deg);
+    opacity: 100%;
+    margin-left: 20px;
   }
+}
