--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -4,26 +4,12 @@
   max-height: fit-content;
   background-color: black;
   margin: auto;
-  padding-bottom: 20px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-    /* animation: App-logo-spin-to-appear infinite 10s linear; */
-  }
 }
 
 .App-header {
   /* Font must be changes here for the app */
   /* font-family: 'Josefin Sans', sans-serif; */
   padding: 0 96px;
-  padding-bottom: 50px;
   margin: 0 130px;
   font-family: "Poppins", sans-serif;
   min-height: 700px;
@@ -48,35 +34,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  0% {
-    transform: rotate(0deg);
-    opacity: 100%;
-    margin-left: 100px;
-  }
-  50% {
-    transform: rotate(360deg);
-    opacity: 0%;
-    margin-right: 200px;
-  }
-  100% {
-    transform: rotate(720deg);
-    opacity: 100%;
-    margin-left: 100px;
-  }
-}
-
-@keyframes App-logo-spin-to-appear {
-  from {
-    transform: rotate(0deg);
-    opacity: 0%;
-  }
-  to {
-    transform: rotate(360deg);
-    opacity: 100%;
-  }
 }
 
 #mainContainer {
